fix scrollbars for chromium browsers

--- a/src/components/programs/help/help.component.scss
+++ b/src/components/programs/help/help.component.scss
@@ -20,7 +20,7 @@
         height: calc(100% - 40px);
         display: flex;
         flex-direction: column;
-        overflow-y: scroll;
+        overflow-y: auto;
 
         .top {
           margin-bottom: 20px;
