--- a/src/components/programs/system-monitor/system-monitor.component.scss
+++ b/src/components/programs/system-monitor/system-monitor.component.scss
@@ -23,7 +23,7 @@
       background-color: white;
       border-style: inset;
       border-color: #3b3b3b #e7e7e7 #e7e7e7 #3b3b3b;
-      overflow-y: scroll;
+      overflow: auto;
 
       .open-programs {
         margin-bottom: 12px;
