--- a/src/components/programs/windows-explorer/windows-explorer.component.scss
+++ b/src/components/programs/windows-explorer/windows-explorer.component.scss
@@ -23,7 +23,7 @@
           display: flex;
           width: 100%;
           height: 100%;
-          overflow-y: scroll;
+          overflow-y: auto;
           gap: 30px;
           flex-wrap: wrap;
           align-content: flex-start;
